unpackaged/main/default/objects/Base_Price__c/Base_Price__c.object-meta.xml
<CustomObject>
    <label>Base Price</label>
    <nameField>
        <label>Base Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>