unpackaged/main/default/objects/Base_Price__c/fields/Has_Region__c.field-meta.xml
<CustomField>
    <fullName>Has_Region__c</fullName>
    <formula>Region__c &lt;&gt; NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Region?</label>
    <type>Checkbox</type>
</CustomField>