unpackaged/main/default/objects/Base_Price__c/fields/Price_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Group_Id__c</fullName>
    <formula>Pricing_Group__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Group Id</label>
    <type>Text</type>
</CustomField>