unpackaged/main/default/objects/Base_Price__c/fields/Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Group</label>
    <referenceTo>PGM_Pricing_Group__c</referenceTo>
    <relationshipLabel>Base Price</relationshipLabel>
    <relationshipName>Base_Price</relationshipName>
    <type>Lookup</type>
</CustomField>