unpackaged/main/default/objects/Base_Price__c/fields/Pricing_Group_Available__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group_Available__c</fullName>
    <formula>NOT(ISBLANK(Pricing_Group__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Group Available</label>
    <type>Checkbox</type>
</CustomField>