unpackaged/main/default/objects/Base_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Base Price</relationshipLabel>
    <relationshipName>Base_Price</relationshipName>
    <type>Lookup</type>
</CustomField>