unpackaged/main/default/objects/Base_Price__c/fields/Product_Pricing_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Pricing_Division__c</fullName>
    <formula>Product__r.Pricing_Division_Code__c</formula>
    <label>Product Pricing Division</label>
    <type>Text</type>
</CustomField>