unpackaged/main/default/objects/Base_Price__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>