unpackaged/main/default/objects/Base_Price__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>