unpackaged/main/default/objects/Base_Price__c/fields/Weight_UoM__c.field-meta.xml
<CustomField>
    <fullName>Weight_UoM__c</fullName>
    <label>Weight UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>lbs</fullName>
            </value>
            <value>
                <fullName>lbs/ft</fullName>
            </value>
            <value>
                <fullName>Kgs</fullName>
            </value>
            <value>
                <fullName>Kg/M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>