unpackaged/main/default/objects/Base_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Price__c</columns>
    <columns>Region__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pricing_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>